# AOC2022

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  tree.txt
AOC/: CMakeLists.txt  beacon_exclusion_zone.cpp  beacon_exclusion_zone_cu.cu  blizzard_basin.cpp  blizzard_basin.cu  boiling_boulders.cpp  calorie_counting.cpp  camp_cleanup.cpp  cathode_ray_tube.cpp  cuda.hpp  cuda_test.cu  distress_signal.cpp  full_of_hot_air.cpp  grove_positioning_system.cpp  hill_climbing_algorithm.cpp  monkey_in_the_middle.cpp  monkey_map.cpp  monkey_math.cu  monkey_math.inl  no_space_left_on_device.cpp  not_enough_minerals.cpp  pch.hpp  proboscidea_volcanium.cpp  pyroclastic_flow.cpp  regolith_reservoir.cpp  rock_paper_scissors.cpp  rope_bridge.cpp  rucksack_reorganization.cpp  supply_stacks.cpp  test.cpp  treetop_tree_house.cpp  tuning_trouble.cpp  unstable_diffusion.cpp  unstable_diffusion.cu
